// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with giant numbers 1`] = `
<RCTScrollView>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 30,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              goldAmount
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                  },
                ]
              }
            >
              
              
              18,000,000,000.000
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                Subtotal @ 
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  €
                  0.55
                </Text>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                31,920,000.00
              </Text>
            </Text>
          </View>
          <View>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="feeDrawer/ExchangeConfirmationCard"
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                      }
                    }
                  >
                    feeActual
                  </Text>
                  <View
                    style={
                      Object {
                        "transform": Array [
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <svg
                      fill="none"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <path
                        d="M3 6l5 5 5-5"
                        stroke="#B4B9BD"
                      />
                    </svg>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "marginVertical": 5,
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "marginRight": 5,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2E3338",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 16,
                            "lineHeight": 22,
                          },
                          undefined,
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      style={
                        Array [
                          undefined,
                          Object {
                            "color": undefined,
                          },
                        ]
                      }
                    >
                      
                      $
                      0
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                total
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 15,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                31,920,000.00
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                Object {
                  "marginVertical": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                Celo Dollars (@
                 
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  0.75
                </Text>
                )
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 15,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#81868B",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                24,000,000.00
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`renders correctly with no exchange rate 1`] = `
<RCTScrollView>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 30,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              goldAmount
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                  },
                ]
              }
            >
              
              
              20.000
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                Subtotal @ 
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  €
                  0.55
                </Text>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                2.64
              </Text>
            </Text>
          </View>
          <View>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="feeDrawer/ExchangeConfirmationCard"
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                      }
                    }
                  >
                    feeActual
                  </Text>
                  <View
                    style={
                      Object {
                        "transform": Array [
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <svg
                      fill="none"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <path
                        d="M3 6l5 5 5-5"
                        stroke="#B4B9BD"
                      />
                    </svg>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "marginVertical": 5,
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "marginRight": 5,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2E3338",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 16,
                            "lineHeight": 22,
                          },
                          undefined,
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      style={
                        Array [
                          undefined,
                          Object {
                            "color": undefined,
                          },
                        ]
                      }
                    >
                      
                      $
                      0
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                total
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 15,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                2.64
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                Object {
                  "marginVertical": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                Celo Dollars (@
                 
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  0.75
                </Text>
                )
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 15,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#81868B",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                1.99
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;
